--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -85,7 +85,7 @@
     </widget>
     <widget class="QWidget" name="tab_3">
      <attribute name="title">
-      <string>History</string>
+      <string>OpenGl 3D Widget</string>
      </attribute>
      <widget class="QWidget" name="verticalLayoutWidget_3">
       <property name="geometry">
